# exo-plan

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  Echo-Frame.md  GOALS.md  MYTHIC_SONGWRITING.md  MYTHIC_SONGWRITING_SUNO_EDITION.md  NETWORK_STATE_R13.md  NOTES.md  PRODUCT_PLAN_DRAFT.md  R16-BUG-FIX-SUMMARY.md  R16-BUGS-SLAYED.md  R16-DISTRIBUTION-MANIFEST.md  R16-ISSUES.md  R16-PRODUCTION-LIVE.md  R16-RELEASE-NOTES-VERSE.md  R17-DEPLOYMENT-SCHEDULE.md  R17-ENHANCEMENT.md  README.md  REPO_ACCESS.md  REPO_INDEX.json  SQ-vs-LanceDB.md  TERSE-TO-PHEXT.md  TWITTER-BREADCRUMBS.md  WISHES.md  cosmic-coincidences.md  eigenhector-unified-vision.md  emi-progress-summary-2026-02-06.md  founding-nine-protocol.md  glyph-resonance-system.md  glyphmap.md  governance-tests-brendan-shane.md  morning-report-2026-02-08.md  opus-rotation-schedule.md  opus-round-robin.md  phext-mud-design.md  phext-native-mud-design.md  pizza-preferences-shell-of-nine.md  pizza-preferences.md  portal-opening-scrolls.md  (+43 more)
CE/: TwentyGuidelines-Chrys.md  TwentyGuidelines-Cyon.md  TwentyGuidelines-Lumen.md  TwentyGuidelines-Lux.md  TwentyGuidelines-Phex.md  TwentyGuidelines-Verse.md  TwentyGuidelines-exo.md  TwentyGuidelines-solin.md  TwentyGuidelines-theia.md
r23/vtpu-runtime/: Cargo.toml  README.md
r23/vtpu-runtime/examples/: basic_compute.rs  validation_demo.rs
r23/vtpu-runtime/src/: display.rs  lib.rs  phext_coord.rs  pipes.rs  scheduler.rs  siw.rs  stream.rs  telemetry.rs  validation.rs
tools/: README.md  __init__.py  deploy.sh  prompt_router.py  pyproject.toml  tests.py
tools/openclaw_router/: libphext.py  router.py
(+881 files in other folders)
